final touches for code review

--- a/code/index.html
+++ b/code/index.html
@@ -799,10 +799,19 @@
                             </p>
                     </div>
 
+                    <br>
+
+                    
                 </div>
 
+
                 <!--email actions-->
-                <div class="row d-flex justify-content-evenly">
+                <div class="row d-flex justify-content-center">
+
+                    <!--text area response-->
+                    <div class="col-11">
+                        <textarea id="text-area" class="form-control" placeholder="Reply" id="floatingTextarea" rows="5"></textarea>     
+                    </div>
 
                     <!--reply button-->
                     <button type="button" class="btn btn-outline-primary col-4">Reply</button>
